--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ matrix:
   allow_failures:
     - go: tip
 
-before_install:
+install:
   - go get github.com/inconshreveable/mousetrap 
   - go get github.com/tools/godep
